# ScholarlyQuotes

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: db_conn.rs  errors.rs  main.rs  models.rs  scheduler.rs  service.yaml
src/db/: conn.rs  mod.rs  queries.rs
src/db/queries/: mod.rs  pg.rs  rds.rs
src/db_queries/: fetch.rs  mod.rs  model.rs  qotd.rs
src/entities/: categories.rs  mod.rs  prelude.rs  quote_category.rs  quote_of_the_day.rs  quotes.rs
src/helper/: governor.rs  mod.rs  oauth.rs  quotes.rs
src/models/: data.rs  errors.rs
src/routes/: add_quotes.rs  auth_token.rs  cache.rs  create_citations.rs  get_citations.rs  health.rs  mod.rs  oauth.rs  qotd.rs  quotes.rs  tokens.rs
src/routes/citations/: create.rs  fetch.rs  mod.rs
src/routes/quotes/: fetch.rs  mod.rs
src/services/: conn.rs  database.rs  mod.rs  monitor.rs  quotes.rs  scheduler.rs
src/services/middleware/: admin.rs  admin_middleware.rs  auth_middleware.rs  authentication.rs  mod.rs
src/utils/: constants.rs  env.rs  env_utils.rs  jwt.rs  jwt_utils.rs  languages.rs  mod.rs
