[package]
name = "scholarly-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
