[package]
name = "scholarly-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
firebase-rs = "2.1.1"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
rand = "0.8"
jsonwebtoken = "8"
futures-util = { version = "0.3.31", default-features = false }

[[bin]]
name = "scholarly_quotes"
path = "src/main.rs"
