[package]
name = "scholarly-quotes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
jsonwebtoken = "8"
futures-util = { version = "0.3.31", default-features = false }
tokio-postgres = "0.7.13"
postgres-openssl = "0.5.1"
postgres = "0.19.10"
openssl = "0.10.71"
chrono = "0.4"
actix-rt = "2.10.0"

[[bin]]
name = "scholarly_quotes"
path = "src/main.rs"
